# pyrealsense2

./: CMakeLists.txt  README.md
src/: pyrealsense2.cpp  pyrealsense2.hpp  pyrealsense2.i
